--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,14 @@
 name: test
 on:
+  push:
+    branches: [ main ]
   pull_request:
-  push: { branches: [ main ] }
-
+    branches: [ main ]
+  workflow_dispatch:
 jobs:
+  lint:
+    uses: graphqlswift/ci/.github/workflows/lint.yaml@main
   test:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: fwal/setup-swift@v1
-      - uses: actions/checkout@v2
-      - name: Run tests
-        run: swift test
+    uses: graphqlswift/ci/.github/workflows/test.yaml@main
+    with:
+      include_android: false
